--- a/frontend/src/components/Team.css
+++ b/frontend/src/components/Team.css
@@ -7,3 +7,7 @@ body {
     background-size: 100% auto;
     font-family: 'Lato', sans-serif;
 }
+
+/*#team-box .card {
+	min-height: 22.25em;
+}*/
